2015-08-05  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (width_check): Just use the public
	put_char function; no need to manipulate column
	or call put_indent.

2015-08-05  Kaz Kylheku  <kaz@kylheku.com>

	Better diagnostic in funcall family of functions.

	* lib.c (wrongargs): New static function.
	(funcall, funcall2, funcall2, funcall3, funcall4):
	Use wrongargs.

2015-08-05  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (do_eval): Bugfix: though last_form_evaled is
	saved and restored around the execution of a special operator,
	it is never set the current form.

2015-08-04  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (bind_args): Use new ~! for proper indentation
	of multi-line context form.
	(apply): Use ~! for proper indentation of function code.

	* unwind.c (uw_throw): Use ~! for proper indentation of code.

2015-08-04  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (put_string): In indent mode, put_string has
	to process all the characters as if by put_char,
	(which we now do literally that way).
	(set_indent_mode): Bugfix: no longer reset the column
	to zero when turning off indent mode. This is wrong since
	streams do column counting all the time.

2015-08-04  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (vformat): Implement ~! format directive for indentation.
	Allow negative widths to be specified with a leading minus sign,
	so that we can indent to the left.

	* txr.1: Document ~! format directive.

2015-08-04  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (put_string, put_char): Do not put out the indentation
	immediately after outputting a newline. Rather, delay the output of the
	indentation until some output occurs at column zero.

2015-08-04  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (inc_indent): If a negative indentation increment goes below
	zero, clamp it at zero.
	(set_indent): Clamp indentation value to zero.

2015-08-04  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (vormat): Bugfix: when width specified as *